fixed section spacing

--- a/style.css
+++ b/style.css
@@ -169,7 +169,7 @@ main {
 
         display: flex;
         -webkit-box-pack: center;
-        justify-content: center;
+        justify-content: space-evenly;
         -webkit-box-align: center;
         flex-direction: column;
         align-items: flex-start;
